    
    S2GRAPH-84: Test-case compilation error on `s2counter_loader` project (Committed by Jaesang Kim).

    S2GRAPH-104: force scalaz-stream, netty-http-pipelining dependencies version which is available on maven central (Committed by DOYUNG YOON).
    
    S2GRAPH-109: Merge duplicate test.sh into one same as `Your First Graph` on README.md (Committed by DOYUNG YOON).

    S2GRAPH-106: Remove warnings while package (Committed by DOYUNG YOON).

    S2GRAPH-112: Additional refinements in README.md
		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON).

    S2GRAPH-111: typo fix: getServiceLable -> getServiceLabel
		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON).
	
    S2GRAPH-110: Add more committer's public key to KEYS file (Committed by DOYUNG YOON).

    S2GRAPH-113: Add license header on `bin/example.sh` (Committed by DOYUNG YOON).
     
    S2GRAPH-114: `MethodNotSupportedException` class in s2counter_core project miss license header (Committed by DOYUNG YOON).
    
    S2GRAPH-129: Restrict direct access on Edge's properties from other classes. (Committed by DOYUNG YOON).
 
    S2GRAPH-130: Edge.propsWithTs data type should be changed into mutable to support setter interface exist in tp3 (Committed by DOYUNG YOON).
    
    S2GRAPH-131: Add actual implementation on interfaces from TinkerPop3 structure package. (Committed by DOYUNG YOON).
   
  TEST
    
    S2GRAPH-21: Change PostProcessBenchmarkSpec not to store and fetch test data from storage. (Committed by DOYUNG YOON).

    S2GRAPH-108: Support continuous integration test. 
    (Contributed by Injun Song<ijsong@gmail.com>, committed by DOYUNG YOON)
		
    S2GRAPH-144: [S2GRAPH-144] Travis icon in README is not proper link
    (Contributed by Injun Song<ijsong@gmail.com>, committed by Daewon Jeong)

    S2GRAPH-145: [S2GRAPH-145] Improve travis to cache maven directory
    Contributed by Injun Song<ijsong@gmail.com>, committed by Daewon Jeong)